deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev
    run: my-nginx
  name: my-nginx
  namespace: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    env: dev
    run: my-nginx
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    env: dev
  name: my-nginx
  namespace: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      run: my-nginx
  template:
    metadata:
      labels:
        env: dev
        run: my-nginx
    spec:
      containers:
      - env:
        - name: FOO
          value: BAR
        image: jeonghyuck/jenkins-test:9
        name: my-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html-volume
          mountPath: /usr/share/nginx/html/index.html
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 256Mi
      volumes:
      - name: index-html-volume
        configMap:
          name: nginx-index-html
