ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: ingress-tls
  namespace: my-nginx
spec:
  tls:
    - hosts:
        - example.com
      secretName: nginx-secret  # Make sure this secret contains valid certs
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  number: 80
          - path: /backend1
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  number: 80
          - path: /backend2
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  number: 80
